# AIOrchestra

./: .gitignore  AGENTS.md  CLAUDE.md  POC_DAEDALUS_DO_NOT_MERGE.md  README.md  aiorchestra.yaml.example  codex.toml  pyproject.toml
.cursor/rules/: architecture.mdc  preserve-existing-infrastructure.mdc  python-environment.mdc
.github/workflows/: ci.yml  refactor-trigger.yml
.semgrep/: aiorchestra.yaml
aiorchestra/: __init__.py  _langfuse.py  _logging.py  _sentry.py  agents.py  cli.py  config.py  dispatcher.py  pipeline.py
aiorchestra/ai/: __init__.py  _agents.py  _base.py  _claude_code.py  _cli.py  _codex.py  _gemini.py  _jules.py  _ollama.py  _opencode.py  _registry.py  claude.py  ollama.py  provider.py
aiorchestra/stages/: _shell.py  _workspace_artifacts.py  ci.py  clarification.py  discover.py  implement.py  labels.py  osint.py  prepare.py  publish.py  review.py  types.py  validate.py
aiorchestra/templates/: __init__.py  fix_ci.md  fix_review.md  fix_validation.md  (+5 more)
scripts/: simple_agent.sh  wait-for-issue.sh
tests/: conftest.py  test_ci.py  test_clarification.py  test_codex.py  test_config.py  test_discover.py  test_dispatcher.py  test_gemini.py  test_implement.py  test_jules.py  test_labels.py  test_langfuse.py  test_logging.py  test_ollama.py  test_opencode.py  test_osint.py  test_pipeline.py  test_prepare.py  test_publish.py  test_review.py  test_sentry.py  test_templates.py  test_validate.py  test_watch.py  test_workspace_artifacts.py
think_tank/: adr-001-evaluate-dagger-io.md  adr-002-observability-strategy.md  eval-code-quality-tools.md
