[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiorchestra"
version = "0.1.0"
description = "Orchestrate AI coding agents with deterministic shell automation"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "bandit>=1.7",
]

[project.scripts]
aiorchestra = "aiorchestra.cli:main"

[tool.setuptools.packages.find]
include = ["aiorchestra*"]

[tool.ruff]
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert used (fine outside tests)
# B404: import subprocess (expected — this tool orchestrates shell commands)
# B602: shell=True (intentional — runs user-configured lint/test commands)
# B603: subprocess without shell (intentional — runs CLI tools)
skips = ["B101", "B404", "B602", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
